# Agent97_v2

./: .gitignore  README.md  TOOLS.md  architecture.md  dal_changes.md  data_model.md  pyproject.toml  repository_guide.md  requirements.txt  schema.md  validate.py
banking_generator/: __init__.py  cli.py  config.py  faker_compat.py  generator.py  validation.py
output/small/: account_openings.json  accounts.json  agent_feedback.json  approvals.json  behavioral_signals.json  credit_cards.json  customers.json  devices.json  fraud_alerts.json  fraud_cases.json  investigations.json  knowledge_base.json  kyc_documents.json  loans.json  merchants.json  mule_networks.json  sessions.json  task_history.json  transactions.json
src/: __init__.py
src/data/: __init__.py  cache.py  data_access_layer.py  indexes.py  query_engine.py  relationships.py
src/models/: __init__.py  account.py  base.py  customer.py  datasets.py  fraud_alert.py  investigation.py  transaction.py
src/repositories/: __init__.py  banking_repository.py  base_repository.py  customer_repository.py  digital_repository.py  factory.py  fraud_repository.py  investigation_repository.py  knowledge_repository.py  memory_repository.py  transaction_repository.py
src/tests/: test_dal.py  test_indexing.py  test_investigation_package.py  test_relationships.py  test_repositories.py
src/tools/: __init__.py  banking_tools.py  base.py  customer_tools.py  dependencies.py  digital_tools.py  exceptions.py  fraud_tools.py  investigation_tools.py  knowledge_tools.py  memory_tools.py  registry.py  schemas.py  (+1 more)
(+1 files in other folders)
